--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ assets:
 logo: logo.png
 discus_shortname: MADness
 email: mad@ness.com
-url: "http://carlosal1015.github.io"
+url: "https://carlosal1015.github.io"
 search: true
 share: true
 comments: true
