--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,16 @@ description: A Template for Jekyll
 # Files
 baseurl: dist
 pagesdir:
+
+
+# In _config.yml
+defaults:
+  -
+    scope:
+      path: "dist"
+      type: "pages"
+    values:
+      layout: "project"
+      author: "Mr. Hyde"
+      category: "project"
+...
