--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ description: A Template for Jekyll
 
 # Files
 baseurl: "pages"
-url: "https://carlosal1015.github.io"
+url: https://carlosal1015.github.io
