--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: "MADness"
 description: A Template for Jekyll
 
 # Files
-baseurl: /pages
+baseurl:
+pagesdir: pages
 url: "https://carlosal1015.github.io"
 
 #dependencies
