--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Blog
 subtitle: by HTML5 UP
 email: email@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/home" # the subpath of your site, e.g. /blog
+#baseurl: "/home" # the subpath of your site, e.g. /blog
 url: github.io
 author: Me
 street_address: 1234 Somewhere Road
