--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ icons:
   reddit: carlosal1015
   stack_exchange: https://stackexchange.com/users/9558603/oromion
   wordpress: blogdeoromion
-#  youtube_username: channel/UC0dDIu9Ppa8BMXrNksA5oYA
+  youtube_username: UC0dDIu9Ppa8BMXrNksA5oYA
 
 # Prettify url.
 permalink: pretty
