--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ plugins:
   - jekyll-paginate
   - jekyll-feed
   - jemoji
+#  - jekyll-multiple-languages-plugin
 # -jekyll-katex
 
 # Styles: see "_sass/base/_variables.scss"
@@ -66,6 +67,9 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - vendor
+  - Rakefile
 
 #katex:
 #    path_to_js: "./_plugins/katex.min.js"
+
+#languages: ["en", "de", "es"]
