--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Oromion
 title: Oromion's blog
 description: Blog about mathematics, TeX and programming.
 avatar: /assets/img/ogp.png
-favicon: /assets/img/ogp.png
+favicon: /assets/favicon.ico
 language: en
 
 # Icons
